SSBD202306-95 | reinicjalizacja bazy danych po każdym teście; testy integracyjne dla aktywacji konta; zmiana API PUT -> PATCH; wyłączenie wysyłania emailów z transakcji; konfiguracja loggera dla testcontainers; refactor;