@@ -8,7 +8,6 @@ import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import jakarta.annotation.security.PermitAll;
 import jakarta.annotation.security.RolesAllowed;
@@ -19,6 +18,7 @@ import jakarta.ejb.TransactionAttributeType;
 import jakarta.inject.Inject;
 import jakarta.security.enterprise.identitystore.PasswordHash;
 import pl.lodz.p.it.ssbd2023.ssbd06.exceptions.ApplicationBaseException;
+import pl.lodz.p.it.ssbd2023.ssbd06.mok.dto.AccountActiveStatusDto;
 import pl.lodz.p.it.ssbd2023.ssbd06.mok.dto.AccountDto;
 import pl.lodz.p.it.ssbd2023.ssbd06.mok.dto.AccountPasswordDto;
 import pl.lodz.p.it.ssbd2023.ssbd06.mok.dto.EditAccountRolesDto;
@@ -29,7 +29,6 @@ import pl.lodz.p.it.ssbd2023.ssbd06.mok.exceptions.TokenExceededHalfTimeExceptio
 import pl.lodz.p.it.ssbd2023.ssbd06.mok.exceptions.TokenNotFoundException;
 import pl.lodz.p.it.ssbd2023.ssbd06.mok.services.AccountService;
 import pl.lodz.p.it.ssbd2023.ssbd06.persistence.entities.Account;
-import pl.lodz.p.it.ssbd2023.ssbd06.service.messaging.notifications.NotificationsProvider;
 import pl.lodz.p.it.ssbd2023.ssbd06.service.observability.Monitored;
 import pl.lodz.p.it.ssbd2023.ssbd06.service.security.AuthenticatedAccount;
 import pl.lodz.p.it.ssbd2023.ssbd06.service.security.OnlyGuest;
@@ -42,21 +41,16 @@ import pl.lodz.p.it.ssbd2023.ssbd06.service.security.password.BCryptHash;
 public class AccountEndpoint {
 
     @Inject
-    private AccountService accountService;
-
-    @Inject
     private AuthenticatedAccount authenticatedAccount;
-
     @Inject
-    private NotificationsProvider notificationsProvider;
-
+    private AccountService accountService;
     @Inject
     @BCryptHash
     private PasswordHash hashProvider;
 
     @RolesAllowed(ADMINISTRATOR)
-    public void changeAccountActiveStatus(final long id, final boolean active) {
-        accountService.changeAccountActiveStatus(id, active);
+    public void changeAccountActiveStatus(final long id, final AccountActiveStatusDto dto) {
+        accountService.changeAccountActiveStatus(id, dto.isActive());
     }
 
     @RolesAllowed(ADMINISTRATOR)
@@ -81,17 +75,12 @@ public class AccountEndpoint {
 
     @PermitAll
     public void updateOwnAccountDetails(final UpdateAccountDetailsDto updateAccountDetailsDto) throws AccountAlreadyExistException {
-
         accountService.updateOwnAccountDetails(authenticatedAccount.getLogin(), updateAccountDetailsDto.toDomain());
     }
 
     @PermitAll
     public void saveSuccessfulAuthAttempt(final LocalDateTime authenticationDate, final String login, final String ipAddress) {
         accountService.updateSuccessfulAuthInfo(authenticationDate, login, ipAddress);
-
-        if (authenticatedAccount.isAdmin()) {
-            notificationsProvider.notifySuccessfulAdminAuthentication(authenticationDate, login, ipAddress);
-        }
     }
 
     @PermitAll
@@ -146,6 +135,6 @@ public class AccountEndpoint {
     public List<AccountDto> getAccounts() {
         return accountService.getAccounts().stream()
                 .map(AccountDto::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
